# lm

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COLOR_API_TROUBLESHOOTING.md  IntermediateData.xlsx  README-DEPLOY.md  Reproduction.cs  analyze_excel_formulas.py  backup_mysql.sh  build-and-upload.sh  build-api.ps1  build-api.sh  build-web-turbo.sh  build-web-zip.sh  build-web.ps1  build-web.sh  build-worker.ps1  build-worker.sh  cleanup.ps1  cleanup_editor.py  docker-compose-infra.yml  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.infrastructure.yml  docker-compose.web.yml  docker-compose.yml  download-cdn-libs.sh  fix_and_run.bat  neo4j_login.yml  package.json  pnpm-lock.yaml  previous_editor.vue.txt  previous_editor_utf8.vue.txt  rebuild.sh  run_api_dev.bat  start-dev.ps1  (+11 more)
nlq-agent/: .env.example  .env.production.example  .gitignore  AGENTS.md  API.md  CONTRIBUTING.md  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  VIBE_CODING_CHECKLIST.md  benchmark_baseline.md  docker-compose.test.yml  docker-compose.yml  litellm_config.yaml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  turbo.json
nlq-agent/apps/: AGENTS.md
nlq-agent/apps/web/: AGENTS.md  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
nlq-agent/apps/web/app/: AGENTS.md  layout.tsx  page.tsx
nlq-agent/apps/web/components/: AGENTS.md
nlq-agent/apps/web/playwright-report/: index.html
nlq-agent/apps/web/tests/: AGENTS.md
nlq-agent/data/lightrag/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
nlq-agent/docs/: AGENTS.md  PRD.md  README.md  RUNBOOK_NLQ_E2E.md  TDD.md  development-guide.md  kg-frontend-ontology.md  kg-validation-guide.md  knowledge-graph.md  lightrag-integration.md
nlq-agent/docs/architecture/: langgraph-agent-api-architecture.md  legacy-two-stage-architecture.md
nlq-agent/docs/audits/: lm-agent-chat-experience-recommendations.md  lm-knowledge-graph-nlq-frontend-recommendations.md  lm-lumei-detection-center-kg-ontology-plan.md  nlq-agent-structure-audit.md  palantir-ontology-findings.md  vue-kg-component-findings.md
nlq-agent/docs/changes/: 000-template.md  001-query-agent-mvp.md  AGENTS.md
nlq-agent/docs/roadmap/: development-plan.md  vibe-coding-checklist.md
nlq-agent/legacy/two-stage-service/: .env.example  API.md  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  docker-compose.production.yml  docker-compose.vectors.yml  requirements.txt
nlq-agent/legacy/two-stage-service/scripts/: AGENTS.md  init_semantic_layer.py  mock_ingest_demo.py  verify_env.py
nlq-agent/legacy/two-stage-service/src/: __init__.py  main.py
nlq-agent/legacy/two-stage-service/tests/: conftest.py
nlq-agent/scripts/: benchmark.py  init_semantic_layer.py  resync_nlq_nightly.sh
nlq-agent/services/: AGENTS.md
nlq-agent/services/agent-api/: .env.example  AGENTS.md  Dockerfile.dev  coverage.xml  docker-compose.lightrag.yml  pyproject.toml
nlq-agent/services/agent-api/app/: AGENTS.md  __init__.py  main.py
nlq-agent/services/agent-api/scripts/: AGENTS.md  _eval_dump.py  kg_step1_step2.py  lightrag_eval.py  lightrag_poc.py  lightrag_reindex.py  rebuild_step_by_step.py  test_kg_api.py
nlq-agent/services/agent-api/tests/: AGENTS.md
nlq-agent/skills/: AGENTS.md
nlq-agent/skills/nlq-query-router/: SKILL.md
nlq-agent/skills/nlq-semantic-layer/: SKILL.md
nlq-agent/skills/nlq-sql-debug/: SKILL.md
nlq-agent/skills/nlq-two-stage/: AGENTS.md  SKILL.md
nlq-agent/src/: AGENTS.md  main.py
nlq-agent/src/api/: AGENTS.md  dependencies.py  middleware.py  routes.py
nlq-agent/src/core/: AGENTS.md  logging_config.py  metrics.py  settings.py
nlq-agent/src/models/: AGENTS.md  ddl.py  schemas.py
nlq-agent/src/pipelines/: AGENTS.md  orchestrator.py
nlq-agent/src/pipelines/stage1/: semantic_kg_agent.py
nlq-agent/src/pipelines/stage2/: data_sql_agent.py
nlq-agent/src/services/: database.py  embedding_client.py  llm_client.py  qdrant_service.py  resync_service.py  sse_emitter.py
nlq-agent/src/utils/: AGENTS.md  prompts.py
nlq-agent/tests/: AGENTS.md  test_pipeline.py
nlq-agent/tests/e2e/: test_e2e_byshift_query.py  test_e2e_pass_rate.py  test_e2e_trend_query.py  test_qdrant_api_compat.py
nlq-agent/tests/fixtures/: seed_lab.sql
nlq-agent/tests/unit/: test_byshift_intent.py  test_chat_stream_defensive.py  test_ci_workflow_yaml.py  test_conceptual_intent.py  test_correlation_middleware.py  test_cors_middleware.py  test_doc_type_to_step_kind.py  test_docker_compose_config.py  test_evaluate_condition.py  test_json_formatter.py  test_llm_client_timeout.py  test_middleware.py  test_rootcause_intent.py  test_rootcause_sql_template.py  test_trend_intent.py
nlq-vanna-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nlq-vanna-service/app/: cli.py  config.py  deps.py  main.py  vanna_app.py
nlq-vanna-service/app/adapters/: mysql_runner.py  qdrant_store.py  tei_embed.py  vllm_llm.py
nlq-vanna-service/app/api/: chat_stream.py  health.py  schemas.py
nlq-vanna-service/app/knowledge/: bootstrap.py  ddl_loader.py  markdown_loader.py  version.py
nlq-vanna-service/app/reasoning/: emitter.py  mapper.py  sql_parser.py
nlq-vanna-service/knowledge/: README.md  ddl.md  judgment_rules.md  qa_examples.yaml  terminology.md
nlq-vanna-service/static/: chat.html
nlq-vanna-service/tests/: conftest.py
nlq-vanna-service/tests/eval/: conftest.py  questions.yaml  runner.py  test_eval.py  test_eval_stretch.py
nlq-vanna-service/tests/integration/: test_chat_stream.py
nlq-vanna-service/tests/unit/: test_ddl_loader.py  test_doc_retrieval.py  test_emitter_threadsafe.py  test_qdrant_store.py  test_reasoning_mapper.py  test_sql_parser.py  test_tei_embed.py  test_vllm_llm.py
(+5411 files in other folders)
