[project]
name = "nlq-agent"
version = "0.1.0"
description = "路美实验室数据分析 — 两阶段问答微服务（语义层 + 数据层）"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "prometheus-client>=0.19,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fastapi>=0.115",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live_llm: 真实 LLM + 真实 MySQL 端到端测试（夜间 advisory lane，非 merge-gating）",
    "live_qdrant: 需要 Qdrant 服务运行的兼容性测试（CI 默认 skip）",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
