[project]
name = "nlq-agent"
version = "0.1.0"
description = "路美实验室数据分析 — 两阶段问答微服务（语义层 + 数据层）"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "prometheus-client>=0.19,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "openai>=1.40",
    "qdrant-client>=1.17.1",
    "pyyaml>=6.0.3",
    "aiomysql>=0.3.2",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live_llm: 真实 LLM + 真实 MySQL 端到端测试（夜间 advisory lane，非 merge-gating）",
    "live_qdrant: 需要 Qdrant 服务运行的兼容性测试（CI 默认 skip）",
    "load: 并发负载测试，可单独跑 pytest -m load",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
