[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlq-vanna-service"
version = "0.1.0"
description = "Vanna-based NLQ microservice for laboratory data analysis"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Vanna core — pinned to 0.7.x (0.8 interface TBD regression)
    "vanna>=0.7.0,<0.8",
    # Web framework
    "fastapi>=0.111.0,<0.116",
    "uvicorn[standard]>=0.29.0,<0.35",
    "sse-starlette>=2.1.0,<3.0",
    # Pydantic settings (env loading)
    "pydantic-settings>=2.2.0,<3.0",
    # Vector store
    "qdrant-client>=1.9.0,<2.0",
    # Embeddings / LLM endpoints
    "httpx>=0.27.0,<0.29",
    # Database
    "pymysql>=1.1.0,<2.0",
    "sqlalchemy>=2.0.0,<3.0",
    # SQL parsing (reasoning condition extractor)
    "sqlglot>=23.0.0,<26",
    # Data processing
    "pandas>=2.2.0,<3.0",
    # Async utilities
    "anyio>=4.3.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.0,<0.24",
    "pytest-cov>=5.0.0,<6.0",
    "pytest-timeout>=2.3.0,<3.0",
    "ruff>=0.4.0,<0.10",
    "mypy>=1.10.0,<2.0",
    "types-pymysql>=1.1.0",
    "pandas-stubs>=2.2.0",
    "httpx>=0.27.0",   # test client
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
markers = [
    "eval: end-to-end evaluation harness (Tier 1+2)",
    "eval_stretch: Tier 3 stretch tests (UX fallback only)",
    "integration: integration tests requiring live services",
    "tier1: Tier 1 happy-path subset (G2 (a) degraded path)",
]
asyncio_mode = "auto"
timeout = 60
testpaths = ["tests"]
