[project]
name = "nlq-agent-api"
version = "0.3.0"
description = "NLQ-Agent FastAPI + LangGraph 后端服务"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Agent 框架
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    # LLM 网关
    "litellm>=1.50.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    # 缓存 / 会话
    "redis>=5.0.0",
    "langgraph-checkpoint-redis>=0.1.0",
    # 知识图谱
    "networkx>=3.4.0",
    "neo4j>=5.27.0",
    # 检索增强：LightRAG（嵌入式 lib，禁用自动抽取只用其检索）
    "lightrag-hku>=1.4.0",
    # BGE 中文 embedding（本地推理，零外网依赖）
    "sentence-transformers>=3.0.0",
    # 数据处理
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pandas>=2.0.0",
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # 工具
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "types-networkx>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "ANN"]
ignore = ["ANN101", "ANN102", "S101", "ANN401", "S104", "S105"]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "ANN", "S608"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/main.py"]

[tool.coverage.report]
# 当前全量单测（mock 化，不含 live_llm/live_qdrant）实际覆盖率 ~38%；
# 门槛取 35 作为防倒退底线，随补测逐步上调
fail_under = 35
